// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options/reducer CUSTOM_SERVER_TOGGLE 1`] = `
Object {
  "customServer": true,
  "customServerUrl": "0.0.0.0:9432",
  "parseMode": "semantic",
  "showLocations": false,
  "uastQuery": "",
}
`;

exports[`options/reducer CUSTOM_SERVER_TOGGLE 2`] = `
Object {
  "customServer": false,
  "customServerUrl": "",
  "parseMode": "semantic",
  "showLocations": false,
  "uastQuery": "",
}
`;

exports[`options/reducer CUSTOM_SERVER_URL_SET 1`] = `
Object {
  "customServer": false,
  "customServerUrl": "newUrl",
  "parseMode": "semantic",
  "showLocations": false,
  "uastQuery": "",
}
`;

exports[`options/reducer LOCATIONS_TOGGLE 1`] = `
Object {
  "customServer": false,
  "customServerUrl": "",
  "parseMode": "semantic",
  "showLocations": false,
  "uastQuery": "",
}
`;

exports[`options/reducer LOCATIONS_TOGGLE 2`] = `
Object {
  "customServer": false,
  "customServerUrl": "",
  "parseMode": "semantic",
  "showLocations": true,
  "uastQuery": "",
}
`;

exports[`options/reducer SET_PARSE_MODE 1`] = `
Object {
  "customServer": false,
  "customServerUrl": "",
  "parseMode": "annotated",
  "showLocations": false,
  "uastQuery": "",
}
`;

exports[`options/reducer SET_UAST_QUERY 1`] = `
Object {
  "customServer": false,
  "customServerUrl": "",
  "parseMode": "semantic",
  "showLocations": false,
  "uastQuery": "test",
}
`;
